force-app/main/default/objects/Doctor__c/fields/Age__c.field-meta.xml
<CustomField>
    <fullName>Age__c</fullName>
    <formula>IF(
  AND(MONTH(TODAY()) &gt; MONTH(Birthdate__c), YEAR(TODAY()) &gt; YEAR(Birthdate__c))
  ,YEAR(TODAY()) - YEAR(Birthdate__c)
  ,IF(
    AND(MONTH(TODAY()) = MONTH(Birthdate__c), DAY(TODAY()) &gt;= DAY(Birthdate__c), YEAR(TODAY()) &gt; YEAR(Birthdate__c))
    ,YEAR(TODAY()) - YEAR(Birthdate__c)
    ,YEAR(TODAY()) - YEAR(Birthdate__c) - 1
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>