force-app/main/default/objects/Doctor__c/fields/DurationHrs__c.field-meta.xml
<CustomField>
    <fullName>DurationHrs__c</fullName>
    <label>Duration(hrs)</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>