force-app/main/default/objects/Doctor__c/fields/DurationMin__c.field-meta.xml
<CustomField>
    <fullName>DurationMin__c</fullName>
    <label>Duration(min)</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>