force-app/main/default/objects/Doctor__c/fields/HourClose__c.field-meta.xml
<CustomField>
    <fullName>HourClose__c</fullName>
    <label>Hour Close</label>
    <type>Time</type>
</CustomField>