force-app/main/default/objects/Doctor__c/fields/HourOpen__c.field-meta.xml
<CustomField>
    <fullName>HourOpen__c</fullName>
    <label>Hour Open</label>
    <required>true</required>
    <type>Time</type>
</CustomField>