force-app/main/default/objects/Doctor__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <label>Location</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>