force-app/main/default/objects/Doctor__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Age__c</columns>
    <columns>HourOpen__c</columns>
    <columns>HourClose__c</columns>
    <columns>Location__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>